--- a/frontend/browser/my-react-app/src/css/buttons.css
+++ b/frontend/browser/my-react-app/src/css/buttons.css
@@ -10,6 +10,7 @@
     margin: 10px;
     border: 1px solid black;
     box-shadow: 5px 5px 5px hsla(0, 0%, 0%, 0.1);
+    border-radius: 20px;
   }
   
   
@@ -24,6 +25,7 @@
     margin: 10px;
     border: 1px solid black;
     box-shadow: 5px 5px 5px hsla(0, 0%, 0%, 0.1);
+    border-radius: 20px;
   }
   
   .buttonDone:hover{
