--- a/frontend/browser/my-react-app/src/css/buttons.css
+++ b/frontend/browser/my-react-app/src/css/buttons.css
@@ -60,3 +60,17 @@
     background-color: hsla(120, 83%, 50%, 0.37);
     cursor: pointer;
   }
+
+  .buttonRegister{
+    padding: 20px;
+    margin: 10px;
+    border: 1px solid black;
+    box-shadow: 5px 5px 5px hsla(0, 0%, 0%, 0.1);
+    border-radius: 20px;
+    transition-duration: 0.4s;
+  }
+
+  .buttonRegister:hover{
+    background-color: hsla(120, 83%, 50%, 0.37);
+    cursor: pointer;
+  }
