--- a/frontend/browser/my-react-app/src/css/LoginPage.css
+++ b/frontend/browser/my-react-app/src/css/LoginPage.css
@@ -1,3 +1,93 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Popping", sans-serif;
+}
+
+.loginBody{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    background: url("E:\XAMPP\htdocs\ToDo\frontend\browser\my-react-app\src\assets\Particles-Rain-Background.webp") no-repeat;
+    background-size: cover;
+    background-position: center ;
+
+}
+
+.Mainform{
+    width: 420px;
+    background: transparent;
+    border: 2px solid rgba(255, 255, 255,.2);
+    backdrop-filter: blur(10px);
+    box-shadow:  0 0 10px rgba(0, 0, 0,.2);
+    color: #fff;
+    border-radius: 10px;
+    padding: 30px 40px;
+}
+
+.Mainform h1{
+    font-size: 36px;
+    text-align: center;
+}
+
+.Mainform .login{
+    position: relative;
+    width: 100%;
+    height: 50px;
+    margin: 30px 0; 
+}
+
+.login input{
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    border: none;
+    outline: none;
+    border: 2px solid rgba(255, 255, 255,.2);
+    border-radius: 40px;
+    font-size: 16px;
+    color: #fff;
+    padding: 20px 45px 20px 20px;
+}
+
+.login input::placeholder{
+    color: #fff;
+}
+
+.login i{
+    position: absolute;
+    right: 20px;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 20px;
+}
+
+.Mainform .remember{
+    display: flex;
+    justify-content: space-between;
+    font-size: 14.5px;
+    margin: -15px 0 15px
+}
+
+.remember label input{
+    accent-color: #fff;
+    margin-right: 3px;
+}
+
+.remember a{
+    color: #fff;
+    text-decoration: none;
+}
+
+.remember a:hover{
+    text-decoration: underline;
+}
+
+
+/*
 .loginBody{
     background-color: antiquewhite;
 }
@@ -34,8 +124,11 @@ input {
     outline: none;
     margin: 5px;
 }
-
-.buttonsLogin{
+ */
+ 
+.buttonsOfLogin{
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    
 }
+   
