--- a/frontend/browser/my-react-app/src/css/RegisterPage.css
+++ b/frontend/browser/my-react-app/src/css/RegisterPage.css
@@ -11,7 +11,7 @@
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: url("E:\XAMPP\htdocs\ToDo\frontend\browser\my-react-app\src\assets\Particles-Rain-Background.webp") no-repeat;
+    background: url("../assets/Particles-Rain-Background.webp") no-repeat;
     background-size: cover;
     background-position: center ;
 }
