--- a/frontend/browser/my-react-app/src/css/header_footer.css
+++ b/frontend/browser/my-react-app/src/css/header_footer.css
@@ -1,9 +1,61 @@
-.header{
+.headerBar{
     display: flex;
-    flex-direction: row;
     padding: 20px;
     margin: 10px;
+    flex-direction: row;
+    align-items: baseline;
+    background: rgb(120, 120, 214);
+    justify-content: space-between;
 }
+
+.headerBar h1{
+    justify-content: flex-start;
+}
+
+
+
+
+
+
+.buttonHeader{
+    padding: 20px;
+    margin: 10px;
+    border: 1px solid black;
+    box-shadow: 5px 5px 5px hsla(0, 0%, 0%, 0.1);
+    border-radius: 20px;
+    transition-duration: 0.4s;
+}
+
+.buttonHeader:hover{
+    background-color: hsla(120, 83%, 50%, 0.37);
+    cursor: pointer;
+}
+
+.modalOverlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.5); 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 1000;
+}
+
+.modalContent {
+    background: white;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    width: 400px;
+    max-width: 90%;
+    text-align: center;
+}
+
+
+
 
 
 
